--- a/index.html
+++ b/index.html
@@ -285,26 +285,25 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 356px;
-  height: 415px;
+  width: 85%; /* or 100% if you want full bleed */
+  height: 70%; /* adjust as needed */
   transform: translate(-50%, -50%);
   overflow: hidden;
-  z-index: 1;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
   background: transparent;
+  z-index: 1;
 }
 
 .export-style .catch-photo {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: center;
+  object-fit: cover;        /* ensures crop + scale */
+  object-position: center;  /* centers image */
   display: block;
-  background: transparent;
   z-index: 1;
 }
 
