--- a/index.html
+++ b/index.html
@@ -1076,8 +1076,8 @@ shareButton.addEventListener("click", () => {
   clone.style.position = 'absolute';
   clone.style.top = '0';
   clone.style.left = '0';
-  clone.style.opacity = '0';
-  clone.style.pointerEvents = 'none';
+  clone.style.opacity = '1';
+  clone.style.pointerEvents = 'auto';
   clone.style.background = '#000';
 
   // Remove buttons
