--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
+  z-index: 0;
 
   background-color: #000; /* force black background */
   background-clip: padding-box;
