--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
   justify-content: center;
 
   background: transparent;
-  z-index: 0;
+  z-index: 1;
   border-radius: 10px; /* optional, for styling */
 }
 
 .export-style .catch-photo {
   width: 100%;
   height: 100%;
-  object-fit: contain;  /* Use contain for full image visibility */
+  object-fit: cover;  /* Use contain for full image visibility */
   object-position: center;
   display: block;
   z-index: 1;
