--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
 }
 
 .export-style .catch-photo {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;  /* Use contain for full image visibility */
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;  /* Use contain for full image visibility */
   object-position: center;
   display: block;
   z-index: 1;
@@ -1080,9 +1080,10 @@ shareButton.addEventListener("click", () => {
   const clone = card.cloneNode(true);
   clone.classList.add("export-style");
 
-  clone.style.position = 'fixed';          // fix it relative to viewport
-clone.style.top = '-9999px';             // way offscreen vertically
-clone.style.left = '-9999px';            // way offscreen horizontally
+  clone.style.position = 'absolute';
+clone.style.top = '0';
+clone.style.left = '0';
+clone.style.visibility = 'hidden';            // way offscreen horizontally
 clone.style.width = '420px';              // match your card width exactly
 clone.style.height = '620px';             // match your card height exactly
 clone.style.opacity = '1';                // fully visible inside that offscreen spot
