--- a/index.html
+++ b/index.html
@@ -290,20 +290,16 @@
 
 .export-style .image-window {
   position: absolute;
-  top: 50%;  /* center vertically */
-  left: 50%; /* center horizontally */
-  width: 85%; /* about 357px (85% of 420) */
-  height: 70%; /* about 434px (70% of 620) */
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  overflow: hidden;
-
+  width: 85%;
+  height: 70%;
   display: flex;
-  align-items: center;
   justify-content: center;
-
-  background: transparent;
-  z-index: 1;
-  border-radius: 10px; /* optional, for styling */
+  align-items: center;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .export-style .catch-photo {
