--- a/index.html
+++ b/index.html
@@ -981,23 +981,14 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
     }
   }
 
-  await renderPhotoPosts();
-
-  // Clear inputs and file input
-  input.value = '';
-  document.getElementById("captionInput").value = '';
-  document.getElementById("locationInput").value = '';
-  document.getElementById("weightInput").value = '';
-}
-
-async function renderPhotoPosts() {
+  async function renderPhotoPosts() {
   const gallery = document.getElementById("photoGallery");
   gallery.innerHTML = "";
 
   const photos = await getAllPhotosFromDB();
   photos.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
 
-  photos.forEach((photo) => {
+  photos.forEach(photo => {
     const card = document.createElement("div");
     card.className = "catch-card";
 
@@ -1010,35 +1001,30 @@ async function renderPhotoPosts() {
 
     const info = document.createElement("div");
     info.className = "catch-info";
-
     if (photo.caption) {
-      const caption = document.createElement("p");
-      caption.className = "catch-caption";
-      caption.textContent = photo.caption;
-      info.appendChild(caption);
+      const cap = document.createElement("p");
+      cap.className = "catch-caption";
+      cap.textContent = photo.caption;
+      info.appendChild(cap);
     }
-
     if (photo.location) {
-      const location = document.createElement("p");
-      location.className = "catch-location";
-      location.textContent = "Ability: " + photo.location;
-      info.appendChild(location);
+      const loc = document.createElement("p");
+      loc.className = "catch-location";
+      loc.textContent = "Ability: " + photo.location;
+      info.appendChild(loc);
     }
-
     if (photo.timestamp) {
-      const date = document.createElement("p");
-      date.className = "catch-date";
-      date.textContent = "Caught: " + new Date(photo.timestamp).toLocaleString();
-      info.appendChild(date);
+      const dt = document.createElement("p");
+      dt.className = "catch-date";
+      dt.textContent = "Caught: " + new Date(photo.timestamp).toLocaleString();
+      info.appendChild(dt);
     }
-
     if (photo.weight) {
-      const weight = document.createElement("p");
-      weight.className = "catch-weight";
-      weight.textContent = "Weight: " + photo.weight + " lbs";
-      info.appendChild(weight);
+      const wt = document.createElement("p");
+      wt.className = "catch-weight";
+      wt.textContent = "Weight: " + photo.weight + " lbs";
+      info.appendChild(wt);
     }
-
     card.appendChild(info);
 
     const buttonRow = document.createElement("div");
@@ -1046,9 +1032,8 @@ async function renderPhotoPosts() {
 
     const deleteButton = document.createElement("button");
     deleteButton.textContent = "Delete";
-    deleteButton.title = "Delete this photo";
     deleteButton.addEventListener("click", async () => {
-      if (confirm("Are you sure you want to delete this photo?")) {
+      if (confirm("Delete this photo?")) {
         await deletePhotoFromDB(photo.id);
         await renderPhotoPosts();
       }
@@ -1057,19 +1042,11 @@ async function renderPhotoPosts() {
 
     const shareButton = document.createElement("button");
     shareButton.textContent = "Catch Card";
-    shareButton.title = "Download Catch Card";
-
     shareButton.addEventListener("click", () => {
       const clone = card.cloneNode(true);
       clone.classList.add("export-style");
-
-      // Clean styling to prevent visual glitches
-      clone.style.position = "absolute";
-      clone.style.left = "-9999px"; // Off-screen to avoid flash
-      clone.style.top = "0";
       clone.style.width = "420px";
       clone.style.height = "620px";
-      clone.style.visibility = "hidden";
 
       // Remove buttons from export
       const buttons = clone.querySelector(".catch-buttons");
@@ -1106,7 +1083,7 @@ async function renderPhotoPosts() {
       cardNumber.textContent = `#${String(photo.id).padStart(3, "0")}`;
       clone.appendChild(cardNumber);
 
-      // Add random rarity stars
+      // Add rarity stars
       const starsCount = Math.floor(Math.random() * 5) + 1;
       const rarity = document.createElement("div");
       rarity.className = "catch-rarity";
